--- a/1.4.md
+++ b/1.4.md
@@ -1,9 +1,9 @@
-
-### To get the container running
+# EXERCISE 1.4: MISSING DEPENDENCIES 
+## To get the container running
 ```
 docker run -d --rm -it --name looper-it ubuntu sh -c 'while true; do echo "Input website:"; read website; echo "Searching.."; sleep 1; curl http://$website; done
 ```
-### To enter the input/output loop that is running there
+## To enter the input/output loop that is running there
 ```
 docker attach looper-it
 ```
