--- a/Part-1/1.6.md
+++ b/Part-1/1.6.md
@@ -1,3 +1,4 @@
 # EXERCISE 1.6: HELLO DOCKER HUB
 ## awnser
-"This is the secret message"
+command: basics
+secret message: "This is the secret message"
